ecmascript/parser/tests/test262-error-references/fail/11db90549ed49ac3.js.stderr
error: TS1009
 --> $DIR/tests/test262-parser/fail/11db90549ed49ac3.js:1:6
  |
1 | let x,;
  |      ^

